# DHPGIndex

./: README.md  build.sbt  clean.sh  compile.sh  config.sh  index.sh  package.sh  pom.xml  query.sh  rlz_for_hybrid
dpipe/: adhoc.sh  ap.sh  dc.sh  dist_chic_index.sh  dpipe.sh
index/: align.sh  align_par.sh  build_index  chic_align  chic_index  chic_map  create.sh  create_fasta.py  index_chr.sh  index_partition.sh  load_index
modules/LZ-tools/: Makefile  README  decode32.cpp  merge_limits.cpp  merge_meta_offsets.cpp  merge_vars.cpp  merge_with_offsets.cpp  shrink_ints.cpp  utils.h
modules/chic/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md
modules/chic/dpipe/: dist_chic_index_2.sh  dpipe.sh  drlz.sh  drop_caches.sh  index_chr.sh  launch.sh  preprocess.sh  rm_tmp.sh  rmgaps.sh  sam2pos.sh  sams.sh
modules/chic/ext/: .gitignore  Makefile  clean.sh  compile.sh  fastametadata.hpp  get_relz.sh
modules/chic/ext/BOWTIE2/: .gitignore
modules/chic/ext/BOWTIE2/bowtie2-2.3.0/: .gitignore
modules/chic/ext/LZ/: Makefile  local_ukko.tcl
modules/chic/ext/LZ/EM-LZscan-0.2/: AUTHORS  LICENCE  README
modules/chic/ext/LZ/EM-LZscan-0.2/src/: .gitignore  Makefile  emlz_parser.cpp  main_decode.cpp  uint48.h  utils.sh  validate.sh
modules/chic/ext/LZ/EM-LZscan-0.2/src/emlzscan_src/: compute_lcp.h  match.h  ms_support.h  parse.h  rmq_tree.h  utils.cpp  utils.h
modules/chic/ext/LZ/EM-LZscan-0.2/src/emlzscan_src/io/: backward_stream_reader.h  bidirectional_accessor.h  stream_writer.h
modules/chic/ext/LZ/LZ-Decoder/: .gitignore  Makefile  debug_phrases.cpp  decode.cpp  stream.h  utils.cpp
modules/chic/ext/LZ/LZscan/: README
modules/chic/ext/LZ/LZscan/algorithm/: bitmap.h  common.cpp  common.h  lcp.cpp  lcp.h  lzscan.h  match.h  ms_support.h  parse.cpp  rmq_tree.h
modules/chic/ext/LZ/LZscan/examples/: Makefile  README  count.cpp
modules/chic/ext/LZ/RLZ_parallel/src/: .gitignore  LICENSE  Makefile  README  TODO  common.h  config.sh  dictionary.h  dictionary_fasta.h  fastametadata.hpp  hdfsmetadata.hpp  reference_parser.hpp  rlz_fasta_tools.hpp  rlz_for_hybrid.cpp  rlz_parser.sh  rlz_plain_tools.hpp  utils.sh  validate_fasta.sh  validate_fasta_utils.sh  validate_plain.sh
modules/chic/ext/LZ/RLZ_seq/: README  rlz_sequential_parser.sh  validate_rlz.sh
modules/chic/ext/LZ/kkp64/algorithm/: kkp.hpp
modules/chic/ext/LZ/kkp64/test/: .gitignore  Makefile  common.cpp  common.h  compressKKP3.cpp  validate.sh
modules/chic/src/: .gitignore  BookKeeper.cpp  BookKeeper.h  HybridLZIndex.cpp  HybridLZIndex.h  KernelManager.h  KernelManagerBLAST.cpp  KernelManagerBLAST.h  KernelManagerBWA.cpp  KernelManagerBWA.h  KernelManagerBowTie2.cpp  KernelManagerBowTie2.h  KernelManagerFMI.cpp  KernelManagerFMI.h  Kernelize.cpp  Kernelize.h  LempelZivParser.cpp  LempelZivParser.h  Makefile  MyBuffer.h  MyBufferFastaFile.hpp  MyBufferHDFS.hpp  MyBufferMemSeq.hpp  MyBufferMix.hpp  MyBufferPlainFile.hpp  RangeReporting.cpp  RangeReporting.h  SamReader.cpp  SamReader.h  basic.h  build_index.cpp  chic_align.cpp  chic_index.cpp  chic_kernelize.cpp  chic_map.cpp  fasta.cpp  load_index.cpp  occurrence.h  types.vim  utils.cpp  (+1 more)
modules/chic/src/jni/: hdfs.h
modules/chic/test_scripts/: Makefile  README  bio_utils.sh  clean.sh  detail_test.sh  global_config.sh  test_bio_all.sh  test_bio_compare_kernels.sh  test_bio_detail.sh  test_bio_detail_paired.sh  test_bio_em.sh  test_bio_im.sh  test_bio_lzparam.sh  test_save_load.sh  utils.sh  validate_bio_detail.sh  validate_bio_detail_paired.sh  validate_bio_normal.sh  validate_fmi.sh
modules/chic/test_scripts/bio_data/: .gitignore
modules/chic/test_scripts/bio_data/data_2/: genome.fa  reads.fq
modules/chic/test_scripts/bio_data/data_3/: genome.fa
modules/chic/test_scripts/bio_data/data_4/: genome.fa  info.txt  reads.fq
modules/chic/test_scripts/bio_data/data_5/: genome.fa
modules/chic/test_scripts/bio_data/data_6/: genome.fa
modules/chic/test_scripts/bio_data/data_7/: genome.fa
modules/chic/test_scripts/bio_data/data_8/: README  genome.fa  reads.fq
modules/chic/test_scripts/bio_data/larger/set_1/: README  expected_matches  reads.fq
modules/chic/test_scripts/bio_data/larger/set_2_paired/: README  expected_matches  genome.fa  reads_1.fq  reads_2.fq
modules/chic/test_scripts/utest_data/: .gitignore  ABCD_patterns.txt  ABCD_text.txt  all_patterns.txt  clean.sh  file1.txt  file2.txt  file4.txt
modules/chic/test_scripts/utest_data/expected/: file1.M3.K0.kernel  file1.M3.K5.kernel
modules/chic/test_scripts/utest_data/large/: .gitignore
modules/radix/: radixSA
modules/radix/Debug/src/: runtimes.d
modules/radix/src/: runtimes.cpp
sbin/: dist_chic_align.sh  dist_chic_blast.sh  distributed_indexing.sh  distributed_kernelization.sh  drlz_hg.sh  drlz_microbes.sh  index_chr.sh  index_partition.sh  launch.sh  launch_drlz_hg_par.sh  launch_drlz_microbial_par.sh  merge_blast_index.sh  merge_chr_index.sh  merge_kernels.sh  pipeline_hg.sh  pipeline_microbes.sh  spark-hadoop-init.sh  test.sh  vcf2msa.sh
src/main/scala/: DistributedRLZ.scala  DistributedRLZ2.scala  DistributedRLZ2A.scala  DistributedRLZ2AB.scala  DistributedRLZ2GB.scala  DistributedRLZBGZF.scala  DistributedRLZBitSet.scala  DistributedRLZCache.scala  DistributedRLZDFS.scala  DistributedRLZFasta.scala  DistributedRLZGaps.scala  DistributedRLZHBase.scala  DistributedRLZLBuffer.scala  DistributedRLZLarray.scala  DistributedRLZLarrayBigInt.scala  DistributedRLZSAS.scala  DistributedRLZSpart.scala  DistributedRLZSplit.scala  DistributedRLZSplitArray.scala  DistributedRLZSplitBC.scala  DistributedRLZSplitLen.scala  DistributedRLZSuffixArraySplit.scala  DistributedRLZX.scala  DistributedRLZXZ.scala  DistributedRLZv0.scala  PartitionPG.scala  VCFMultialign2.scala
src/main/scala/org/ngseq/dhpgidx/: DistributedIndexing.scala  DistributedKernelization.scala  DistributedRLZ.scala  DistributedRLZFasta.scala  DistributedRLZGroupTax.scala  SAR.scala
src/main/scala/org/ngseq/panquery/: DistributedIndexing.scala  DistributedRLZ.scala  DistributedRLZ2GB.scala  Kernelize.scala  (+17 more)
