cmake_minimum_required(VERSION 3.14)
project(chic)

set(CMAKE_CXX_STANDARD 14)

include_directories(ext/BOWTIE2/bowtie2-2.2.9)
include_directories(ext/BOWTIE2/bowtie2-2.2.9/third_party)
include_directories(ext/BWA/bwa-0.7.12)
include_directories(ext/LZ/EM-LZscan-0.2/src)
include_directories(ext/LZ/EM-LZscan-0.2/src/emlzscan_src)
include_directories(ext/LZ/EM-LZscan-0.2/src/emlzscan_src/io)
include_directories(ext/LZ/kkp64/algorithm)
include_directories(ext/LZ/kkp64/test)
include_directories(ext/LZ/LZ-Decoder)
include_directories(ext/LZ/LZscan/algorithm)
include_directories(ext/LZ/RLZ_parallel/src)
include_directories(ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src)
include_directories(ext/sdsl-lite-2.0.3/benchmark/indexing_count/src)
include_directories(ext/sdsl-lite-2.0.3/benchmark/indexing_extract/src)
include_directories(ext/sdsl-lite-2.0.3/benchmark/indexing_locate/src)
include_directories(ext/sdsl-lite-2.0.3/build)
include_directories(ext/sdsl-lite-2.0.3/build/external)
include_directories(ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0)
include_directories(ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include)
include_directories(ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest)
include_directories(ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal)
include_directories(ext/sdsl-lite-2.0.3/build/external/libdivsufsort-2.0.1)
include_directories(ext/sdsl-lite-2.0.3/build/external/libdivsufsort-2.0.1/include)
include_directories(ext/sdsl-lite-2.0.3/build/include)
include_directories(ext/sdsl-lite-2.0.3/build/include/sdsl)
include_directories(ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include)
include_directories(ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest)
include_directories(ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal)
include_directories(ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples)
include_directories(ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src)
include_directories(ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test)
include_directories(ext/sdsl-lite-2.0.3/external/gtest-1.6.0/xcode/Samples/FrameworkSample)
include_directories(ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/include)
include_directories(ext/sdsl-lite-2.0.3/include)
include_directories(ext/sdsl-lite-2.0.3/include/sdsl)
include_directories(ext/sdsl-lite-2.0.3/test)
include_directories(ext/sdsl-local-install)
include_directories(ext/sdsl-local-install/include)
include_directories(ext/sdsl-local-install/include/sdsl)
include_directories(src)

add_executable(chic
    ext/BOWTIE2/bowtie2-2.2.9/third_party/cpuid.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_bt.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_bt.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_cache.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_cache.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_driver.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_driver.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_metrics.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_report.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_result.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_result.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_seed.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_seed.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_seed2.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_seed2.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_seed_policy.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_seed_policy.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_sw.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_sw.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_sw_common.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_sw_driver.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_sw_driver.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_sw_nuc.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_swsse.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_swsse.h
    ext/BOWTIE2/bowtie2-2.2.9/aligner_swsse_ee_i16.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_swsse_ee_u8.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_swsse_loc_i16.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aligner_swsse_loc_u8.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aln_sink.cpp
    ext/BOWTIE2/bowtie2-2.2.9/aln_sink.h
    ext/BOWTIE2/bowtie2-2.2.9/alphabet.cpp
    ext/BOWTIE2/bowtie2-2.2.9/alphabet.h
    ext/BOWTIE2/bowtie2-2.2.9/assert_helpers.h
    ext/BOWTIE2/bowtie2-2.2.9/banded.cpp
    ext/BOWTIE2/bowtie2-2.2.9/banded.h
    ext/BOWTIE2/bowtie2-2.2.9/binary_sa_search.h
    ext/BOWTIE2/bowtie2-2.2.9/bitpack.h
    ext/BOWTIE2/bowtie2-2.2.9/blockwise_sa.h
    ext/BOWTIE2/bowtie2-2.2.9/bowtie_build_main.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bowtie_main.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bt2_build.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bt2_dp.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bt2_idx.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bt2_idx.h
    ext/BOWTIE2/bowtie2-2.2.9/bt2_inspect.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bt2_io.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bt2_search.cpp
    ext/BOWTIE2/bowtie2-2.2.9/bt2_search.h
    ext/BOWTIE2/bowtie2-2.2.9/bt2_util.cpp
    ext/BOWTIE2/bowtie2-2.2.9/btypes.h
    ext/BOWTIE2/bowtie2-2.2.9/ccnt_lut.cpp
    ext/BOWTIE2/bowtie2-2.2.9/diff_sample.cpp
    ext/BOWTIE2/bowtie2-2.2.9/diff_sample.h
    ext/BOWTIE2/bowtie2-2.2.9/dp_framer.cpp
    ext/BOWTIE2/bowtie2-2.2.9/dp_framer.h
    ext/BOWTIE2/bowtie2-2.2.9/ds.cpp
    ext/BOWTIE2/bowtie2-2.2.9/ds.h
    ext/BOWTIE2/bowtie2-2.2.9/edit.cpp
    ext/BOWTIE2/bowtie2-2.2.9/edit.h
    ext/BOWTIE2/bowtie2-2.2.9/endian_swap.h
    ext/BOWTIE2/bowtie2-2.2.9/fast_mutex.h
    ext/BOWTIE2/bowtie2-2.2.9/filebuf.h
    ext/BOWTIE2/bowtie2-2.2.9/formats.h
    ext/BOWTIE2/bowtie2-2.2.9/group_walk.cpp
    ext/BOWTIE2/bowtie2-2.2.9/group_walk.h
    ext/BOWTIE2/bowtie2-2.2.9/ival_list.cpp
    ext/BOWTIE2/bowtie2-2.2.9/ival_list.h
    ext/BOWTIE2/bowtie2-2.2.9/limit.cpp
    ext/BOWTIE2/bowtie2-2.2.9/limit.h
    ext/BOWTIE2/bowtie2-2.2.9/ls.cpp
    ext/BOWTIE2/bowtie2-2.2.9/ls.h
    ext/BOWTIE2/bowtie2-2.2.9/mask.cpp
    ext/BOWTIE2/bowtie2-2.2.9/mask.h
    ext/BOWTIE2/bowtie2-2.2.9/mem_ids.h
    ext/BOWTIE2/bowtie2-2.2.9/mm.h
    ext/BOWTIE2/bowtie2-2.2.9/multikey_qsort.cpp
    ext/BOWTIE2/bowtie2-2.2.9/multikey_qsort.h
    ext/BOWTIE2/bowtie2-2.2.9/opts.h
    ext/BOWTIE2/bowtie2-2.2.9/outq.cpp
    ext/BOWTIE2/bowtie2-2.2.9/outq.h
    ext/BOWTIE2/bowtie2-2.2.9/pat.cpp
    ext/BOWTIE2/bowtie2-2.2.9/pat.h
    ext/BOWTIE2/bowtie2-2.2.9/pe.cpp
    ext/BOWTIE2/bowtie2-2.2.9/pe.h
    ext/BOWTIE2/bowtie2-2.2.9/presets.cpp
    ext/BOWTIE2/bowtie2-2.2.9/presets.h
    ext/BOWTIE2/bowtie2-2.2.9/processor_support.h
    ext/BOWTIE2/bowtie2-2.2.9/qual.cpp
    ext/BOWTIE2/bowtie2-2.2.9/qual.h
    ext/BOWTIE2/bowtie2-2.2.9/random_source.cpp
    ext/BOWTIE2/bowtie2-2.2.9/random_source.h
    ext/BOWTIE2/bowtie2-2.2.9/random_util.cpp
    ext/BOWTIE2/bowtie2-2.2.9/random_util.h
    ext/BOWTIE2/bowtie2-2.2.9/read.h
    ext/BOWTIE2/bowtie2-2.2.9/read_qseq.cpp
    ext/BOWTIE2/bowtie2-2.2.9/ref_coord.cpp
    ext/BOWTIE2/bowtie2-2.2.9/ref_coord.h
    ext/BOWTIE2/bowtie2-2.2.9/ref_read.cpp
    ext/BOWTIE2/bowtie2-2.2.9/ref_read.h
    ext/BOWTIE2/bowtie2-2.2.9/reference.cpp
    ext/BOWTIE2/bowtie2-2.2.9/reference.h
    ext/BOWTIE2/bowtie2-2.2.9/sam.cpp
    ext/BOWTIE2/bowtie2-2.2.9/sam.h
    ext/BOWTIE2/bowtie2-2.2.9/scoring.cpp
    ext/BOWTIE2/bowtie2-2.2.9/scoring.h
    ext/BOWTIE2/bowtie2-2.2.9/search_globals.h
    ext/BOWTIE2/bowtie2-2.2.9/sequence_io.h
    ext/BOWTIE2/bowtie2-2.2.9/shmem.cpp
    ext/BOWTIE2/bowtie2-2.2.9/shmem.h
    ext/BOWTIE2/bowtie2-2.2.9/simple_func.cpp
    ext/BOWTIE2/bowtie2-2.2.9/simple_func.h
    ext/BOWTIE2/bowtie2-2.2.9/sse_util.cpp
    ext/BOWTIE2/bowtie2-2.2.9/sse_util.h
    ext/BOWTIE2/bowtie2-2.2.9/sstring.cpp
    ext/BOWTIE2/bowtie2-2.2.9/sstring.h
    ext/BOWTIE2/bowtie2-2.2.9/str_util.h
    ext/BOWTIE2/bowtie2-2.2.9/threading.h
    ext/BOWTIE2/bowtie2-2.2.9/timer.h
    ext/BOWTIE2/bowtie2-2.2.9/tinythread.cpp
    ext/BOWTIE2/bowtie2-2.2.9/tinythread.h
    ext/BOWTIE2/bowtie2-2.2.9/tokenize.h
    ext/BOWTIE2/bowtie2-2.2.9/unique.cpp
    ext/BOWTIE2/bowtie2-2.2.9/unique.h
    ext/BOWTIE2/bowtie2-2.2.9/util.h
    ext/BOWTIE2/bowtie2-2.2.9/word_io.h
    ext/BOWTIE2/bowtie2-2.2.9/zbox.h
    ext/BWA/bwa-0.7.12/bamlite.c
    ext/BWA/bwa-0.7.12/bamlite.h
    ext/BWA/bwa-0.7.12/bntseq.c
    ext/BWA/bwa-0.7.12/bntseq.h
    ext/BWA/bwa-0.7.12/bwa.c
    ext/BWA/bwa-0.7.12/bwa.h
    ext/BWA/bwa-0.7.12/bwamem.c
    ext/BWA/bwa-0.7.12/bwamem.h
    ext/BWA/bwa-0.7.12/bwamem_extra.c
    ext/BWA/bwa-0.7.12/bwamem_pair.c
    ext/BWA/bwa-0.7.12/bwape.c
    ext/BWA/bwa-0.7.12/bwase.c
    ext/BWA/bwa-0.7.12/bwase.h
    ext/BWA/bwa-0.7.12/bwaseqio.c
    ext/BWA/bwa-0.7.12/bwashm.c
    ext/BWA/bwa-0.7.12/bwt.c
    ext/BWA/bwa-0.7.12/bwt.h
    ext/BWA/bwa-0.7.12/bwt_gen.c
    ext/BWA/bwa-0.7.12/bwt_lite.c
    ext/BWA/bwa-0.7.12/bwt_lite.h
    ext/BWA/bwa-0.7.12/bwtaln.c
    ext/BWA/bwa-0.7.12/bwtaln.h
    ext/BWA/bwa-0.7.12/bwtgap.c
    ext/BWA/bwa-0.7.12/bwtgap.h
    ext/BWA/bwa-0.7.12/bwtindex.c
    ext/BWA/bwa-0.7.12/bwtsw2.h
    ext/BWA/bwa-0.7.12/bwtsw2_aux.c
    ext/BWA/bwa-0.7.12/bwtsw2_chain.c
    ext/BWA/bwa-0.7.12/bwtsw2_core.c
    ext/BWA/bwa-0.7.12/bwtsw2_main.c
    ext/BWA/bwa-0.7.12/bwtsw2_pair.c
    ext/BWA/bwa-0.7.12/example.c
    ext/BWA/bwa-0.7.12/fastmap.c
    ext/BWA/bwa-0.7.12/is.c
    ext/BWA/bwa-0.7.12/kbtree.h
    ext/BWA/bwa-0.7.12/khash.h
    ext/BWA/bwa-0.7.12/kopen.c
    ext/BWA/bwa-0.7.12/kseq.h
    ext/BWA/bwa-0.7.12/ksort.h
    ext/BWA/bwa-0.7.12/kstring.c
    ext/BWA/bwa-0.7.12/kstring.h
    ext/BWA/bwa-0.7.12/ksw.c
    ext/BWA/bwa-0.7.12/ksw.h
    ext/BWA/bwa-0.7.12/kthread.c
    ext/BWA/bwa-0.7.12/kvec.h
    ext/BWA/bwa-0.7.12/main.c
    ext/BWA/bwa-0.7.12/malloc_wrap.c
    ext/BWA/bwa-0.7.12/malloc_wrap.h
    ext/BWA/bwa-0.7.12/pemerge.c
    ext/BWA/bwa-0.7.12/QSufSort.c
    ext/BWA/bwa-0.7.12/QSufSort.h
    ext/BWA/bwa-0.7.12/utils.c
    ext/BWA/bwa-0.7.12/utils.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/io/backward_stream_reader.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/io/bidirectional_accessor.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/io/stream_writer.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/compute_lcp.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/match.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/ms_support.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/parse.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/rmq_tree.h
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/utils.cpp
    ext/LZ/EM-LZscan-0.2/src/emlzscan_src/utils.h
    ext/LZ/EM-LZscan-0.2/src/emlz_parser.cpp
    ext/LZ/EM-LZscan-0.2/src/main_decode.cpp
    ext/LZ/EM-LZscan-0.2/src/main_encode.cpp
    ext/LZ/EM-LZscan-0.2/src/uint40.h
    ext/LZ/EM-LZscan-0.2/src/uint48.h
    ext/LZ/kkp64/algorithm/kkp.hpp
    ext/LZ/kkp64/test/common.cpp
    ext/LZ/kkp64/test/common.h
    ext/LZ/kkp64/test/compressKKP3.cpp
    ext/LZ/kkp64/test/count.cpp
    ext/LZ/kkp64/test/gensa.cpp
    ext/LZ/LZ-Decoder/debug_phrases.cpp
    ext/LZ/LZ-Decoder/decode.cpp
    ext/LZ/LZ-Decoder/stream.h
    ext/LZ/LZ-Decoder/utils.cpp
    ext/LZ/LZ-Decoder/utils.h
    ext/LZ/LZscan/algorithm/bitmap.h
    ext/LZ/LZscan/algorithm/common.cpp
    ext/LZ/LZscan/algorithm/common.h
    ext/LZ/LZscan/algorithm/divsufsort.c
    ext/LZ/LZscan/algorithm/divsufsort.h
    ext/LZ/LZscan/algorithm/lcp.cpp
    ext/LZ/LZscan/algorithm/lcp.h
    ext/LZ/LZscan/algorithm/lzscan.h
    ext/LZ/LZscan/algorithm/match.h
    ext/LZ/LZscan/algorithm/ms_support.h
    ext/LZ/LZscan/algorithm/parse.cpp
    ext/LZ/LZscan/algorithm/rmq_tree.h
    ext/LZ/LZscan/examples/count.cpp
    ext/LZ/RLZ_parallel/src/common.h
    ext/LZ/RLZ_parallel/src/dictionary.h
    ext/LZ/RLZ_parallel/src/dictionary_fasta.h
    ext/LZ/RLZ_parallel/src/fastametadata.hpp
    ext/LZ/RLZ_parallel/src/reference_parser.hpp
    ext/LZ/RLZ_parallel/src/rlz_fasta_tools.hpp
    ext/LZ/RLZ_parallel/src/rlz_for_hybrid.cpp
    ext/LZ/RLZ_parallel/src/rlz_plain_tools.hpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/build_idx.cpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/doc_list_index.hpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/doc_list_index_greedy.hpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/doc_list_index_qprobing.hpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/doc_list_index_sada.hpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/doc_list_index_sort.hpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/gen_pattern.cpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/query_idx.cpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/size_of_idx.cpp
    ext/sdsl-lite-2.0.3/benchmark/document_retrieval/src/word_pat2char_pat.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_count/src/build_index_sdsl.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_count/src/genpatterns.c
    ext/sdsl-lite-2.0.3/benchmark/indexing_count/src/info.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_count/src/interface.h
    ext/sdsl-lite-2.0.3/benchmark/indexing_count/src/run_queries_sdsl.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_extract/src/build_index_sdsl.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_extract/src/genintervals.c
    ext/sdsl-lite-2.0.3/benchmark/indexing_extract/src/info.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_extract/src/interface.h
    ext/sdsl-lite-2.0.3/benchmark/indexing_extract/src/run_queries_sdsl.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_locate/src/build_index_sdsl.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_locate/src/info.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_locate/src/interface.h
    ext/sdsl-lite-2.0.3/benchmark/indexing_locate/src/pattern_random.cpp
    ext/sdsl-lite-2.0.3/benchmark/indexing_locate/src/run_queries_sdsl.cpp
    ext/sdsl-lite-2.0.3/benchmark/lcp/src/create_lcp.cpp
    ext/sdsl-lite-2.0.3/benchmark/lcp/src/create_sa_bwt.cpp
    ext/sdsl-lite-2.0.3/benchmark/rrr_vector/src/generate_rnd_bitvector.cpp
    ext/sdsl-lite-2.0.3/benchmark/rrr_vector/src/rrr_time_and_space.cpp
    ext/sdsl-lite-2.0.3/benchmark/self_delimiting_codes/src/sdc_benchmark.cpp
    ext/sdsl-lite-2.0.3/benchmark/wavelet_trees/src/gen_bwt.cpp
    ext/sdsl-lite-2.0.3/benchmark/wavelet_trees/src/wt_time_and_space.cpp
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-death-test-internal.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-filepath.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-internal.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-linked_ptr.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-param-util-generated.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-param-util.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-port.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-string.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-tuple.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/internal/gtest-type-util.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest-death-test.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest-message.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest-param-test.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest-printers.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest-spi.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest-test-part.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest-typed-test.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest_pred_impl.h
    ext/sdsl-lite-2.0.3/build/external/gtest-1.6.0/include/gtest/gtest_prod.h
    ext/sdsl-lite-2.0.3/build/external/libdivsufsort-2.0.1/include/config.h
    ext/sdsl-lite-2.0.3/build/external/libdivsufsort-2.0.1/include/divsufsort.h
    ext/sdsl-lite-2.0.3/build/external/libdivsufsort-2.0.1/include/divsufsort64.h
    ext/sdsl-lite-2.0.3/build/include/sdsl/bit_vector_il.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/bit_vectors.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/bits.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/bp_support.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/bp_support_algorithm.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/bp_support_g.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/bp_support_gg.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/bp_support_sada.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/coder.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/coder_comma.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/coder_elias_delta.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/coder_elias_gamma.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/coder_fibonacci.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/config.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct_bwt.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct_config.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct_isa.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct_lcp.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct_lcp_helper.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct_sa.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/construct_sa_se.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/csa_alphabet_strategy.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/csa_bitcompressed.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/csa_sada.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/csa_sampling_strategy.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/csa_wt.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/cst_iterators.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/cst_sada.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/cst_sct3.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/dac_vector.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/enc_vector.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/fast_cache.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/int_vector.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/int_vector_buffer.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/int_vector_io_wrappers.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/int_vector_mapper.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/inv_perm_support.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/io.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/iterators.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/k2_treap.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/k2_treap_algorithm.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/k2_treap_helper.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_bitcompressed.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_byte.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_dac.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_support_sada.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_support_tree.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_support_tree2.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_vlc.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/lcp_wt.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/louds_tree.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/memory_management.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/nearest_neighbour_dictionary.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/nn_dict_dynamic.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/qsufsort.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/ram_filebuf.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/ram_fs.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rank_support.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rank_support_scan.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rank_support_v.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rank_support_v5.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rmq_succinct_sada.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rmq_succinct_sct.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rmq_support.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rmq_support_sparse_table.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rrr_helper.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rrr_vector.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/rrr_vector_15.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/sd_vector.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/sdsl_concepts.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/select_support.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/select_support_mcl.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/select_support_scan.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/sfstream.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/sorted_int_stack.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/sorted_multi_stack_support.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/sorted_stack_support.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/structure_tree.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/suffix_array_algorithm.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/suffix_array_helper.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/suffix_arrays.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/suffix_tree_algorithm.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/suffix_tree_helper.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/suffix_trees.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/uint128_t.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/uint256_t.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/uintx_t.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/util.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/vectors.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/vlc_vector.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wavelet_trees.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wm_int.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_algorithm.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_blcd.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_gmr.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_helper.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_huff.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_hutu.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_int.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_pc.hpp
    ext/sdsl-lite-2.0.3/build/include/sdsl/wt_rlmn.hpp
    ext/sdsl-lite-2.0.3/examples/bit-vector.cpp
    ext/sdsl-lite-2.0.3/examples/c++11-initializer-list.cpp
    ext/sdsl-lite-2.0.3/examples/construct-in-memory.cpp
    ext/sdsl-lite-2.0.3/examples/csa-alphabet-strategy.cpp
    ext/sdsl-lite-2.0.3/examples/cst-bfs-iterator.cpp
    ext/sdsl-lite-2.0.3/examples/cst-node-child-iterator.cpp
    ext/sdsl-lite-2.0.3/examples/fm-index.cpp
    ext/sdsl-lite-2.0.3/examples/fm-rmq-index.cpp
    ext/sdsl-lite-2.0.3/examples/hugepages.cpp
    ext/sdsl-lite-2.0.3/examples/int-vector-buffer-iterator.cpp
    ext/sdsl-lite-2.0.3/examples/int-vector-buffer.cpp
    ext/sdsl-lite-2.0.3/examples/int-vector-entry.cpp
    ext/sdsl-lite-2.0.3/examples/int-vector-mapper.cpp
    ext/sdsl-lite-2.0.3/examples/intersect.cpp
    ext/sdsl-lite-2.0.3/examples/k2_treap_in_mem.cpp
    ext/sdsl-lite-2.0.3/examples/louds-tree.cpp
    ext/sdsl-lite-2.0.3/examples/memory-visualization.cpp
    ext/sdsl-lite-2.0.3/examples/node_iterator.cpp
    ext/sdsl-lite-2.0.3/examples/range-minimum-queries.cpp
    ext/sdsl-lite-2.0.3/examples/sa-construct-space-efficient.cpp
    ext/sdsl-lite-2.0.3/examples/sa-int-construct-from-file.cpp
    ext/sdsl-lite-2.0.3/examples/sd_vector_benchmark.cpp
    ext/sdsl-lite-2.0.3/examples/storage-visualization.cpp
    ext/sdsl-lite-2.0.3/examples/store_to_file.cpp
    ext/sdsl-lite-2.0.3/examples/text-statistics.cpp
    ext/sdsl-lite-2.0.3/examples/uint64-array2int_vector.cpp
    ext/sdsl-lite-2.0.3/examples/write_structure.cpp
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/codegear/gtest_all.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/codegear/gtest_link.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-death-test-internal.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-filepath.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-internal.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-linked_ptr.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-param-util-generated.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-param-util.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-port.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-string.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-tuple.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/internal/gtest-type-util.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest-death-test.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest-message.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest-param-test.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest-printers.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest-spi.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest-test-part.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest-typed-test.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest_pred_impl.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/include/gtest/gtest_prod.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/prime_tables.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample1.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample1.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample10_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample1_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample2.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample2.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample2_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample3-inl.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample3_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample4.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample4.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample4_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample5_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample6_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample7_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample8_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/samples/sample9_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-all.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-death-test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-filepath.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-internal-inl.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-port.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-printers.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-test-part.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest-typed-test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/src/gtest_main.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-death-test_ex_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-death-test_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-filepath_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-linked_ptr_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-listener_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-message_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-options_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-param-test2_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-param-test_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-param-test_test.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-port_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-printers_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-test-part_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-tuple_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-typed-test2_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-typed-test_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-typed-test_test.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest-unittest-api_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_all_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_break_on_failure_unittest_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_catch_exceptions_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_color_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_env_var_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_environment_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_filter_unittest_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_help_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_list_tests_unittest_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_main_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_no_test_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_output_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_pred_impl_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_prod_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_repeat_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_shuffle_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_sole_header_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_stress_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_throw_on_failure_ex_test.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_throw_on_failure_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_uninitialized_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_unittest.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_xml_outfile1_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_xml_outfile2_test_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/gtest_xml_output_unittest_.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/production.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/test/production.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/xcode/Samples/FrameworkSample/widget.cc
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/xcode/Samples/FrameworkSample/widget.h
    ext/sdsl-lite-2.0.3/external/gtest-1.6.0/xcode/Samples/FrameworkSample/widget_test.cc
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/examples/bwt.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/examples/mksary.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/examples/sasearch.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/examples/suftest.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/examples/unbwt.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/include/divsufsort_private.h
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/lib/divsufsort.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/lib/sssort.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/lib/trsort.c
    ext/sdsl-lite-2.0.3/external/libdivsufsort-2.0.1/lib/utils.c
    ext/sdsl-lite-2.0.3/include/sdsl/bit_vector_il.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/bit_vectors.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/bits.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/bp_support.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/bp_support_algorithm.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/bp_support_g.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/bp_support_gg.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/bp_support_sada.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/coder.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/coder_comma.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/coder_elias_delta.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/coder_elias_gamma.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/coder_fibonacci.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/config.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct_bwt.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct_config.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct_isa.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct_lcp.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct_lcp_helper.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct_sa.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/construct_sa_se.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/csa_alphabet_strategy.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/csa_bitcompressed.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/csa_sada.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/csa_sampling_strategy.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/csa_wt.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/cst_iterators.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/cst_sada.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/cst_sct3.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/dac_vector.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/enc_vector.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/fast_cache.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/int_vector.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/int_vector_buffer.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/int_vector_io_wrappers.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/int_vector_mapper.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/inv_perm_support.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/io.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/iterators.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/k2_treap.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/k2_treap_algorithm.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/k2_treap_helper.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_bitcompressed.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_byte.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_dac.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_support_sada.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_support_tree.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_support_tree2.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_vlc.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/lcp_wt.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/louds_tree.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/memory_management.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/nearest_neighbour_dictionary.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/nn_dict_dynamic.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/qsufsort.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/ram_filebuf.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/ram_fs.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rank_support.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rank_support_scan.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rank_support_v.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rank_support_v5.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rmq_succinct_sada.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rmq_succinct_sct.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rmq_support.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rmq_support_sparse_table.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rrr_helper.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rrr_vector.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/rrr_vector_15.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/sd_vector.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/sdsl_concepts.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/select_support.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/select_support_mcl.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/select_support_scan.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/sfstream.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/sorted_int_stack.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/sorted_multi_stack_support.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/sorted_stack_support.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/structure_tree.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/suffix_array_algorithm.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/suffix_array_helper.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/suffix_arrays.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/suffix_tree_algorithm.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/suffix_tree_helper.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/suffix_trees.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/uint128_t.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/uint256_t.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/uintx_t.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/util.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/vectors.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/vlc_vector.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wavelet_trees.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wm_int.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_algorithm.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_blcd.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_gmr.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_helper.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_huff.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_hutu.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_int.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_pc.hpp
    ext/sdsl-lite-2.0.3/include/sdsl/wt_rlmn.hpp
    ext/sdsl-lite-2.0.3/lib/bits.cpp
    ext/sdsl-lite-2.0.3/lib/bp_support_algorithm.cpp
    ext/sdsl-lite-2.0.3/lib/coder_elias_delta.cpp
    ext/sdsl-lite-2.0.3/lib/coder_elias_gamma.cpp
    ext/sdsl-lite-2.0.3/lib/coder_fibonacci.cpp
    ext/sdsl-lite-2.0.3/lib/config.cpp
    ext/sdsl-lite-2.0.3/lib/construct.cpp
    ext/sdsl-lite-2.0.3/lib/construct_config.cpp
    ext/sdsl-lite-2.0.3/lib/construct_isa.cpp
    ext/sdsl-lite-2.0.3/lib/construct_lcp.cpp
    ext/sdsl-lite-2.0.3/lib/construct_lcp_helper.cpp
    ext/sdsl-lite-2.0.3/lib/construct_sa.cpp
    ext/sdsl-lite-2.0.3/lib/construct_sa_se.cpp
    ext/sdsl-lite-2.0.3/lib/csa_alphabet_strategy.cpp
    ext/sdsl-lite-2.0.3/lib/int_vector.cpp
    ext/sdsl-lite-2.0.3/lib/io.cpp
    ext/sdsl-lite-2.0.3/lib/lcp_support_tree.cpp
    ext/sdsl-lite-2.0.3/lib/louds_tree.cpp
    ext/sdsl-lite-2.0.3/lib/memory_management.cpp
    ext/sdsl-lite-2.0.3/lib/nn_dict_dynamic.cpp
    ext/sdsl-lite-2.0.3/lib/ram_filebuf.cpp
    ext/sdsl-lite-2.0.3/lib/ram_fs.cpp
    ext/sdsl-lite-2.0.3/lib/rrr_vector_15.cpp
    ext/sdsl-lite-2.0.3/lib/sfstream.cpp
    ext/sdsl-lite-2.0.3/lib/structure_tree.cpp
    ext/sdsl-lite-2.0.3/lib/uint128_t.cpp
    ext/sdsl-lite-2.0.3/lib/uint256_t.cpp
    ext/sdsl-lite-2.0.3/lib/util.cpp
    ext/sdsl-lite-2.0.3/lib/wt_helper.cpp
    ext/sdsl-lite-2.0.3/test/BitsTest.cpp
    ext/sdsl-lite-2.0.3/test/BitVectorGenerator.cpp
    ext/sdsl-lite-2.0.3/test/BitVectorTest.cpp
    ext/sdsl-lite-2.0.3/test/CoderTest.cpp
    ext/sdsl-lite-2.0.3/test/CompileTest.cpp
    ext/sdsl-lite-2.0.3/test/CompileTest.hpp
    ext/sdsl-lite-2.0.3/test/CsaByteTest.cpp
    ext/sdsl-lite-2.0.3/test/CsaIntTest.cpp
    ext/sdsl-lite-2.0.3/test/CstByteTest.cpp
    ext/sdsl-lite-2.0.3/test/CstHelper.hpp
    ext/sdsl-lite-2.0.3/test/CstIntTest.cpp
    ext/sdsl-lite-2.0.3/test/IntVectorBufferTest.cpp
    ext/sdsl-lite-2.0.3/test/IntVectorGenerator.cpp
    ext/sdsl-lite-2.0.3/test/IntVectorMapperTest.cpp
    ext/sdsl-lite-2.0.3/test/IntVectorTest.cpp
    ext/sdsl-lite-2.0.3/test/InvPermSupportTest.cpp
    ext/sdsl-lite-2.0.3/test/K2TreapTest.cpp
    ext/sdsl-lite-2.0.3/test/LcpConstructTest.cpp
    ext/sdsl-lite-2.0.3/test/NNDictDynamicTest.cpp
    ext/sdsl-lite-2.0.3/test/RankSupportTest.cpp
    ext/sdsl-lite-2.0.3/test/ReplaceIntVectorValue.cpp
    ext/sdsl-lite-2.0.3/test/RMQTest.cpp
    ext/sdsl-lite-2.0.3/test/SaConstructTest.cpp
    ext/sdsl-lite-2.0.3/test/SearchBidirectionalTest.cpp
    ext/sdsl-lite-2.0.3/test/SelectSupportTest.cpp
    ext/sdsl-lite-2.0.3/test/SortedIntStackTest.cpp
    ext/sdsl-lite-2.0.3/test/WtByteTest.cpp
    ext/sdsl-lite-2.0.3/test/WtIntTest.cpp
    ext/sdsl-lite-2.0.3/tutorial/document_listing/doc_list_index.cpp
    ext/sdsl-lite-2.0.3/tutorial/cst-search.cpp
    ext/sdsl-lite-2.0.3/tutorial/cst-traversal.cpp
    ext/sdsl-lite-2.0.3/tutorial/csx-printf.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-01.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-02.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-03.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-04.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-05.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-06.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-07.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-08.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-09.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-10.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-11.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-12.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-13.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-14.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-15.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-16.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-17.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-18.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-19.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-20.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-21.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-22.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-23.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-24.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-25.cpp
    ext/sdsl-lite-2.0.3/tutorial/expl-26.cpp
    ext/sdsl-lite-2.0.3/tutorial/int-vector-buffer.cpp
    ext/sdsl-lite-2.0.3/tutorial/rmq-example.cpp
    ext/sdsl-lite-2.0.3/tutorial/use-a-wavelet-tree.cpp
    ext/sdsl-local-install/include/sdsl/bit_vector_il.hpp
    ext/sdsl-local-install/include/sdsl/bit_vectors.hpp
    ext/sdsl-local-install/include/sdsl/bits.hpp
    ext/sdsl-local-install/include/sdsl/bp_support.hpp
    ext/sdsl-local-install/include/sdsl/bp_support_algorithm.hpp
    ext/sdsl-local-install/include/sdsl/bp_support_g.hpp
    ext/sdsl-local-install/include/sdsl/bp_support_gg.hpp
    ext/sdsl-local-install/include/sdsl/bp_support_sada.hpp
    ext/sdsl-local-install/include/sdsl/coder.hpp
    ext/sdsl-local-install/include/sdsl/coder_comma.hpp
    ext/sdsl-local-install/include/sdsl/coder_elias_delta.hpp
    ext/sdsl-local-install/include/sdsl/coder_elias_gamma.hpp
    ext/sdsl-local-install/include/sdsl/coder_fibonacci.hpp
    ext/sdsl-local-install/include/sdsl/config.hpp
    ext/sdsl-local-install/include/sdsl/construct.hpp
    ext/sdsl-local-install/include/sdsl/construct_bwt.hpp
    ext/sdsl-local-install/include/sdsl/construct_config.hpp
    ext/sdsl-local-install/include/sdsl/construct_isa.hpp
    ext/sdsl-local-install/include/sdsl/construct_lcp.hpp
    ext/sdsl-local-install/include/sdsl/construct_lcp_helper.hpp
    ext/sdsl-local-install/include/sdsl/construct_sa.hpp
    ext/sdsl-local-install/include/sdsl/construct_sa_se.hpp
    ext/sdsl-local-install/include/sdsl/csa_alphabet_strategy.hpp
    ext/sdsl-local-install/include/sdsl/csa_bitcompressed.hpp
    ext/sdsl-local-install/include/sdsl/csa_sada.hpp
    ext/sdsl-local-install/include/sdsl/csa_sampling_strategy.hpp
    ext/sdsl-local-install/include/sdsl/csa_wt.hpp
    ext/sdsl-local-install/include/sdsl/cst_iterators.hpp
    ext/sdsl-local-install/include/sdsl/cst_sada.hpp
    ext/sdsl-local-install/include/sdsl/cst_sct3.hpp
    ext/sdsl-local-install/include/sdsl/dac_vector.hpp
    ext/sdsl-local-install/include/sdsl/enc_vector.hpp
    ext/sdsl-local-install/include/sdsl/fast_cache.hpp
    ext/sdsl-local-install/include/sdsl/int_vector.hpp
    ext/sdsl-local-install/include/sdsl/int_vector_buffer.hpp
    ext/sdsl-local-install/include/sdsl/int_vector_io_wrappers.hpp
    ext/sdsl-local-install/include/sdsl/int_vector_mapper.hpp
    ext/sdsl-local-install/include/sdsl/inv_perm_support.hpp
    ext/sdsl-local-install/include/sdsl/io.hpp
    ext/sdsl-local-install/include/sdsl/iterators.hpp
    ext/sdsl-local-install/include/sdsl/k2_treap.hpp
    ext/sdsl-local-install/include/sdsl/k2_treap_algorithm.hpp
    ext/sdsl-local-install/include/sdsl/k2_treap_helper.hpp
    ext/sdsl-local-install/include/sdsl/lcp.hpp
    ext/sdsl-local-install/include/sdsl/lcp_bitcompressed.hpp
    ext/sdsl-local-install/include/sdsl/lcp_byte.hpp
    ext/sdsl-local-install/include/sdsl/lcp_dac.hpp
    ext/sdsl-local-install/include/sdsl/lcp_support_sada.hpp
    ext/sdsl-local-install/include/sdsl/lcp_support_tree.hpp
    ext/sdsl-local-install/include/sdsl/lcp_support_tree2.hpp
    ext/sdsl-local-install/include/sdsl/lcp_vlc.hpp
    ext/sdsl-local-install/include/sdsl/lcp_wt.hpp
    ext/sdsl-local-install/include/sdsl/louds_tree.hpp
    ext/sdsl-local-install/include/sdsl/memory_management.hpp
    ext/sdsl-local-install/include/sdsl/nearest_neighbour_dictionary.hpp
    ext/sdsl-local-install/include/sdsl/nn_dict_dynamic.hpp
    ext/sdsl-local-install/include/sdsl/qsufsort.hpp
    ext/sdsl-local-install/include/sdsl/ram_filebuf.hpp
    ext/sdsl-local-install/include/sdsl/ram_fs.hpp
    ext/sdsl-local-install/include/sdsl/rank_support.hpp
    ext/sdsl-local-install/include/sdsl/rank_support_scan.hpp
    ext/sdsl-local-install/include/sdsl/rank_support_v.hpp
    ext/sdsl-local-install/include/sdsl/rank_support_v5.hpp
    ext/sdsl-local-install/include/sdsl/rmq_succinct_sada.hpp
    ext/sdsl-local-install/include/sdsl/rmq_succinct_sct.hpp
    ext/sdsl-local-install/include/sdsl/rmq_support.hpp
    ext/sdsl-local-install/include/sdsl/rmq_support_sparse_table.hpp
    ext/sdsl-local-install/include/sdsl/rrr_helper.hpp
    ext/sdsl-local-install/include/sdsl/rrr_vector.hpp
    ext/sdsl-local-install/include/sdsl/rrr_vector_15.hpp
    ext/sdsl-local-install/include/sdsl/sd_vector.hpp
    ext/sdsl-local-install/include/sdsl/sdsl_concepts.hpp
    ext/sdsl-local-install/include/sdsl/select_support.hpp
    ext/sdsl-local-install/include/sdsl/select_support_mcl.hpp
    ext/sdsl-local-install/include/sdsl/select_support_scan.hpp
    ext/sdsl-local-install/include/sdsl/sfstream.hpp
    ext/sdsl-local-install/include/sdsl/sorted_int_stack.hpp
    ext/sdsl-local-install/include/sdsl/sorted_multi_stack_support.hpp
    ext/sdsl-local-install/include/sdsl/sorted_stack_support.hpp
    ext/sdsl-local-install/include/sdsl/structure_tree.hpp
    ext/sdsl-local-install/include/sdsl/suffix_array_algorithm.hpp
    ext/sdsl-local-install/include/sdsl/suffix_array_helper.hpp
    ext/sdsl-local-install/include/sdsl/suffix_arrays.hpp
    ext/sdsl-local-install/include/sdsl/suffix_tree_algorithm.hpp
    ext/sdsl-local-install/include/sdsl/suffix_tree_helper.hpp
    ext/sdsl-local-install/include/sdsl/suffix_trees.hpp
    ext/sdsl-local-install/include/sdsl/uint128_t.hpp
    ext/sdsl-local-install/include/sdsl/uint256_t.hpp
    ext/sdsl-local-install/include/sdsl/uintx_t.hpp
    ext/sdsl-local-install/include/sdsl/util.hpp
    ext/sdsl-local-install/include/sdsl/vectors.hpp
    ext/sdsl-local-install/include/sdsl/vlc_vector.hpp
    ext/sdsl-local-install/include/sdsl/wavelet_trees.hpp
    ext/sdsl-local-install/include/sdsl/wm_int.hpp
    ext/sdsl-local-install/include/sdsl/wt_algorithm.hpp
    ext/sdsl-local-install/include/sdsl/wt_blcd.hpp
    ext/sdsl-local-install/include/sdsl/wt_gmr.hpp
    ext/sdsl-local-install/include/sdsl/wt_helper.hpp
    ext/sdsl-local-install/include/sdsl/wt_huff.hpp
    ext/sdsl-local-install/include/sdsl/wt_hutu.hpp
    ext/sdsl-local-install/include/sdsl/wt_int.hpp
    ext/sdsl-local-install/include/sdsl/wt_pc.hpp
    ext/sdsl-local-install/include/sdsl/wt_rlmn.hpp
    ext/sdsl-local-install/include/divsufsort.h
    ext/sdsl-local-install/include/divsufsort64.h
    src/BookKeeper.cpp
    src/BookKeeper.h
    src/build_index.cpp
    src/chic_align.cpp
    src/chic_index.cpp
    src/chic_map.cpp
    src/fasta.cpp
    src/fasta.h
    src/HybridLZIndex.cpp
    src/HybridLZIndex.h
    src/KernelManager.h
    src/KernelManagerBowTie2.cpp
    src/KernelManagerBowTie2.h
    src/KernelManagerBWA.cpp
    src/KernelManagerBWA.h
    src/KernelManagerFMI.cpp
    src/KernelManagerFMI.h
    src/LempelZivParser.cpp
    src/LempelZivParser.h
    src/load_index.cpp
    src/MyBuffer.h
    src/MyBufferFastaFile.hpp
    src/MyBufferMemSeq.hpp
    src/MyBufferMix.hpp
    src/MyBufferPlainFile.hpp
    src/occurrence.h
    src/RangeReporting.cpp
    src/RangeReporting.h
    src/utils.cpp
    src/utils.h)
